testdata/baselines/reference/submodule/conformance/iterableArrayPattern28.errors.txt
iterableArrayPattern28.ts(2,52): error TS2769: No overload matches this call.
  The last overload gave the following error.
    Type 'boolean' is not assignable to type 'number'.


==== iterableArrayPattern28.ts (1 errors) ====
    function takeFirstTwoEntries(...[[k1, v1], [k2, v2]]: [string, number][]) { }
    takeFirstTwoEntries(...new Map([["", 0], ["hello", true]]));
                                                       ~~~~
!!! error TS2769: No overload matches this call.
!!! error TS2769:   The last overload gave the following error.
!!! error TS2769:     Type 'boolean' is not assignable to type 'number'.
!!! related TS2771 lib.es2015.collection.d.ts:--:--: The last overload is declared here.